# inventario-finanzas-int

./: Makefile  README.md  environment.yml  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
inventario_finanzas_int/: __init__.py  dataset.py  features.py  funciones_auxiliares.py  plots.py
inventario_finanzas_int/modeling/: predict.py  train.py
notebooks/: 1.0-jrb-testing.ipynb
references/: cambios_a_bd.md
