[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "inventario_finanzas_int"
version = "0.0.1"
description = "A repository analyze and automate the inventory management of the Hospital del Torax"
authors = [
  { name = "Javier Rojas" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10"


[tool.ruff]
line-length = 99
src = ["inventario_finanzas_int"]
include = ["pyproject.toml", "inventario_finanzas_int/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["inventario_finanzas_int"]
force-sort-within-sections = true

